--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,22 +8,18 @@ body {
 }
 
 /** Header style rules **/
-header {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    padding: 0.875rem;
-}
 
 #title {
     align-items: center;
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    
+    padding: 0.875rem;
 }
+
 .logo {
-    height: 40px;
-    width: 40px;
+    height: 2.5rem;
+    width: 2.5rem;
 }
 
 
