tidy up comments in dealCard fuction in JS file and add height and width to card class in css file to make image suitable for screensize of 320px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,11 @@ body {
     width: 95%;   
 }
 
+.card {
+    height: 100px;
+    width: 70px;
+}
+
 /**footer styling**/
 /*style for the social media links*/
 .social-media {
