Add menu button back to the header and makes menu-select style. and add data types to buttons on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@ body {
     width: 2.5rem;
 }
 
+#menu-select{
+    text-align: center;
+}
+
 
 /** Style for within the game-table **/
 /** Code taken and adapted from Love MAths project **/
