--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,17 @@ body {
 }
 
 /** div to display results **/
+.modal-surround {
+    background: rgba(0, 0, 0, 0.2);
+    display: none;
+    height: 100vh;
+    left: 50%;
+    position: fixed;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100vw;
+}
+
 #result {
     background-color: red;
     display: none;
