Add containers in the gamesrules article and create content in gameRuleContent function to be appended upon button click from the menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,6 +112,10 @@ header {
     width: 70%;
 }
 
+#game-rules{
+    display: none;
+}
+
 /**footer styling**/
 /*style for the social media links*/
 
