Add mark up to the game rules for accordian menu, style and add JS to make it function on click

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,32 @@ header {
     display: none;
 }
 
+/** Accordion style menu on game rules page taken from https://www.w3schools.com/howto/howto_js_accordion.asp **/
+.rule-heading {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .rule-heading:hover {
+    background-color: #ccc;
+  }
+  
+  /* Style the accordion panel. Note: hidden by default */
+  .rule-segment {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+  }
+
 /**footer styling**/
 /*style for the social media links*/
 
