--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,10 +106,11 @@ header {
     left: 50%;
     height: 20%;
     position: fixed;
-    transform: translate(-50%, -50%);
     top: 50%;
-    z-index: 10;
+    transform: translate(-50%, -50%);
     width: 70%;
+    z-index: 10;
+    
 }
 
 #game-rules{
@@ -119,13 +120,13 @@ header {
 /** Accordion style menu on game rules page taken from https://www.w3schools.com/howto/howto_js_accordion.asp **/
 .rule-heading {
     background-color: #eee;
+    border: none;
     color: #444;
     cursor: pointer;
+    outline: none;
     padding: 18px;
     width: 100%;
     text-align: left;
-    border: none;
-    outline: none;
     transition: 0.4s;
   }
   
@@ -136,10 +137,12 @@ header {
   
   /* Style the accordion panel. Note: hidden by default */
   .rule-segment {
-    padding: 0 18px;
     background-color: white;
-    display: none;
+    max-height: 0;
     overflow: hidden;
+    padding: 0 18px;
+    text-align: left;
+    transition: max-height 0.4s ease-out;
   }
 
 /**footer styling**/
@@ -151,8 +154,8 @@ header {
 }
 
 .social-icon {
+    color: #000;
     font-size: 160%;
     margin: 1%;
-    color: #000;
     padding: 0.3125rem;
 }
