Amend typo pm RG sub menu. Change FA icons and change font size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ header {
 
 .social-icon {
     color: #000;
-    font-size: 160%;
+    font-size: 35px;
     margin: 1%;
     padding: 0.3125rem;
 }
