--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 /**temporary to combat chrome dark theme**/
 body {
     background-color: white;
-    height: 100vh;
+    height: 100%;
 }
 
 /**Generalized classes**/
@@ -22,6 +22,10 @@ body {
 
 .center-margin {
     margin: 0 auto;
+}
+
+.table-section-pad {
+    padding: 10% 5px;
 }
 
 /** Header style rules **/
