--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,7 @@ header {
 
 #game-table {
     background-color: green;
+    border-radius: 20px;
     box-sizing: border-box;
     display: none;
     margin: 0 auto;
