--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@
 /**temporary to combat chrome dark theme**/
 body {
     background-color: white;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 /**Generalized classes**/
@@ -22,10 +23,6 @@ body {
 
 .center-margin {
     margin: 0 auto;
-}
-
-.table-section-pad {
-    padding: 10% 5px;
 }
 
 /** Header style rules **/
