Add flex properties to game-table CSS selector ready for when the js file changes the display from none to flex

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,10 +72,13 @@ header {
 /** Style for within the game-table **/
 
 #game-table {
+    align-items: center;
     background-color: green;
     border-radius: 20px;
     box-sizing: border-box;
     display: none;
+    flex-direction: column;
+    justify-content: space-between;
     margin: 0 auto;
     padding: 1%;
 }
