Set default size for the card smaller but within the same aspect ratio. Add border radius so that all cards are curved uniformly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,8 +78,9 @@ body {
 }
 
 .card {
-    height: 100px;
-    width: 70px;
+    border-radius: 7px;
+    height: 80px;
+    width: 56px;
 }
 
 /** Scoreboard list items **/
