--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,6 +146,7 @@ header {
     left: 50%;
     height: 20%;
     justify-content: space-evenly;
+    max-width: 740px;
     position: relative;
     top: 50%;
     transform: translate(-50%, -50%);
