--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ header {
     height: 120px;
     width: 84px;
     padding: 10px;
-    transform: translateX(10%);
+    /* transform: translateX(10%); */
 }
 
 /** Scoreboard list items **/
@@ -130,7 +130,7 @@ header {
     display: none;
     height: 100vh;
     left: 50%;
-    position: absolute;
+    position: fixed;
     top: 50%;
     transform: translate(-50%, -50%);
     width: 100vw;
