--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 }
 /**temporary to combat chrome dark theme**/
 body {
-    background-color: white;
+    background-color: 	#00FFBF;
     height: 100vh;
     width: 100vw;
 }
@@ -53,15 +53,27 @@ header {
     padding: 5px;
 }
 
+#main-surround {
+    background: linear-gradient(to top left, #bf953f, #fcf6ba, #b38728,#fbf5b7 );
+    border: 1px solid #000;
+    border-radius: 40px;
+    display: flex;
+    height: 74vh;
+    max-width: 1005px;
+    min-height: 490px;
+    padding: 15px;
+    width: 80vw;
+}    
 
 /** Class to set the height of each module the same when it opens **/
 .main-window {
     background-color: #008000;
-    border-radius: 20px;
+    border: 2px solid #000;
+    border-radius: 25px;
     box-sizing: border-box;
     height: 74vh;
     max-width: 1000px;
-    min-height: 485px; 
+    min-height: 485px;
     padding: 0.625rem;
     width: 95vw;
 }
@@ -93,8 +105,8 @@ header {
     display: block;
     height: 4.375rem;
     width: 80%;
-    border: 2px solid #fbf5b7;
-    box-shadow: 4px 6px 19px 4px #bf953f;
+    border: 2px solid #000;
+    box-shadow: 2px 2px 12px 0px #bf953f;
 }
 
 .btn {
