--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,20 +111,21 @@ header {
 }
 
 .menu-opt-btn {
+    border: 2px solid #000;
     border-radius: 15px;
+    box-shadow: 2px 2px 12px 0px #bf953f;
     display: block;
+    font-size: 20px;
     height: 4.375rem;
     width: 80%;
-    border: 2px solid #000;
-    box-shadow: 2px 2px 12px 0px #bf953f;
 }
 
 #hit-btn {
-    margin-right: 10px;
+    margin-right: 7.5px;
 }
 
 #stand-btn {
-    margin-left: 10px;
+    margin-left: 7.5px;
 }
 
 #rules {
@@ -137,16 +138,17 @@ header {
 }
 
 .btn {
-    border-radius: 10px;
-    padding: 5px 10px;
-    box-shadow: 1px 1px 0px 1px #bf953f;
     border: 1px solid #b38728;
+    border-radius: 10px;
+    box-shadow: 1px 1px 0px 1px #bf953f;
+    font-size: 15px;
+    padding: 5px 10px;   
 }
 
 .btn-bg {
     background: linear-gradient(to top left, #bf953f, #fcf6ba, #b38728,#fbf5b7 );
     font-family: 'Acme', sans-serif;
-
+    font-weight: bold;
 }
 
 .btn-bg:hover {
