Add running total to player hand so it shows on the DOM

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,10 +173,12 @@ header {
 .card-container {
     position: relative;
     height: 130px;
+    width: 100%;
 }
 
 #dealer-side, #player-side {
     height: 33%;
+    width: 100%;
 }
 
 .card {
