add key down event for redeal button and underline the d

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,10 @@ header {
     padding-bottom: 14px;
 }
 
+.underline {
+    text-decoration: underline;
+}
+
 /** Header style rules **/
 #title {
     align-items: center;
