--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,13 @@ header {
     text-decoration: underline;
 }
 
+.key-control-indicator {
+    color: darkred;
+    font-weight: bold;
+    text-decoration-line: underline;
+    text-decoration-color: #000;
+}
+
 /** Header style rules **/
 #title {
     align-items: center;
@@ -120,6 +127,7 @@ header {
     box-shadow: 2px 2px 12px 0px #bf953f;
     display: block;
     font-size: 20px;
+    font-weight: bold;
     height: 4.375rem;
     width: 80%;
 }
@@ -132,7 +140,7 @@ header {
     margin-left: 7.5px;
 }
 
-#rules {
+#rules-anchor {
     text-decoration: underline;
 }
 
@@ -154,18 +162,13 @@ header {
 }
 
 .btn-bg {
-    background: linear-gradient(to top left, #bf953f, #fcf6ba, #b38728,#fbf5b7 );
+    background: linear-gradient(to top left, #fbf5b7, #b38728, #fcf6ba, #bf953f);
     font-family: 'Acme', sans-serif;
-    font-weight: bold;
 }
 
 .btn-bg:hover {
-    background: linear-gradient(to top left, #fbf5b7, #b38728, #fcf6ba, #bf953f);
+    background: linear-gradient(to top left, #bf953f, #fcf6ba, #b38728,#fbf5b7);
     cursor: pointer;
-}
-
-.btn-underline {
-    text-decoration: underline;
 }
 
 /** Style for within the game-table **/
