--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ header {
     height: 78vh;
     max-height: 664px;
     max-width: 700px;
-    min-height: 583px;
+    min-height: 615px;
     padding: 15px;
     width: 95vw;
 }    
@@ -88,7 +88,7 @@ header {
     height: 74vh;
     max-height: 630px;
     max-width: 670px;
-    min-height: 550px;
+    min-height: 583px;
     padding: 0.625rem;
     width: 95vw;
 }
@@ -266,7 +266,7 @@ header {
 }
 
 /** Styling for the background of the results pop up **/
-#modal-surround {
+/* #modal-surround {
     background: rgba(0, 0, 0, 0.2);
     display: none;
     height: 100vh;
@@ -276,7 +276,7 @@ header {
     transform: translate(-50%, -50%);
     width: 100vw;
     z-index: 10000;
-}
+} */
 
 /** Styling for the results pop up **/
 #result-modal {
@@ -285,13 +285,13 @@ header {
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    left: 50%;
+    /* left: 50%; */
     height: 150px;
     justify-content: space-evenly;
     max-width: 740px;
-    position: relative;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 330px;
+    /* transform: translate(-50%, -50%); */
     width: 70%;
     z-index: 10;
 }
